# toybox

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  install_android_deps.bat  install_deps.bat  install_deps.sh  install_deps_android.bat  install_deps_ios.sh  install_deps_linux.sh  install_deps_macos.sh  install_deps_mingw.bat  install_deps_windows.bat  install_switch_deps.bat  license.rtf  license.txt  readme.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: android.yml  build.yml  ios.yml  linux.yml  macos.yml  steam_windows.yml  windows.yml
addons/: CMakeLists.txt
addons/water/: CMakeLists.txt
addons/water/include/: ocean.hlsli  oceancomponent.h  oceansystem.h  tb_ocean.slangh  tb_ocean_component.h  tb_ocean_system.h
addons/water/source/: ocean.hlsl  oceancomponent.c  oceanprepass.hlsl  oceansystem.c  tb_ocean.slang  tb_ocean_component.c  tb_ocean_system.c  tb_ocean_two.slangm  tb_oceanprepass.slang
android/: CMakeLists.txt
android/src/main/: AndroidManifest.xml  debug.keystore
android/src/main/java/com/honeybunch/sdltest/: SDLTestActivity.java
android/src/main/java/com/honeybunch/toybox/: ToyboxActivity.java
android/src/main/java/org/libsdl/app/: SDLActivity.java
android/src/main/res/values/: strings.xml
assets/scenes/: Bistro.glb  Boat.glb  BoomBox.glb  Components.glb  Floor.glb  Kenney.glb  Maxwell.glb  Ocean.glb  PBRTest.glb  Sphere.glb  Sponza.glb  Terrain.glb  TestScene.glb  TransformTest.glb  bistro.blend  boat.blend  boat2.blend  boat2.glb  components.blend  island2.blend  island2.glb  kenney.blend  pbr_test.blend  phystest.blend  phystest.glb  shooter.glb  sphere.blend  sponza.blend  terrain.blend  test_scene.blend  transform_test.blend
assets/textures/: brdf.ktx2
blender/: README.md  __init__.py  auto_load.py  cmake.py  components.py  mainpanel.py  menu.py  open_editor.py  preferences.py
blender/templates/: README.md
blender/templates/new_project/: CMakeLists.txt.in
cmake/: Dependencies.cmake  TargetArch.cmake  tb_app.cmake  tb_cooking.cmake  tb_packages.cmake  tb_platform.cmake
include/: allocator.h  assets.h  assetsystem.h  audiosystem.h  bloom.h  boatcamerasystem.h  cameracomponent.h  camerasystem.h  common.hlsli  coreuicomponent.h  coreuisystem.h  cpuresources.h  cube_view_lut.hlsli  dynarray.h  fullscreenvert.hlsli  fxaa.h  fxaa.hlsli  gltf.hlsli  hash.h  imgui.hlsli  imguicomponent.h  imguisystem.h  infomode.h  inputcomponent.h  inputsystem.h  lightcomponent.h  lighting.hlsli  lightsystem.h  loadthread.h  logsystem.h  luminance.h  materialsystem.h  meshcomponent.h  meshsystem.h  noclipcomponent.h  noclipcontrollersystem.h  ocean.hlsli  oceancomponent.h  oceansystem.h  pbr.hlsli  (+122 more)
include/blocks/: Block.h
linux/src/: entry.c
macos/: template.plist.in  toybox.icns
samples/: CMakeLists.txt
samples/bistro/: CMakeLists.txt
samples/bistro/source/: main.c
samples/boat/: CMakeLists.txt
samples/boat/source/: main.c
samples/boat/source/macos/: template.plist.in
samples/boat/source/win32/: tb_boat.exe.manifest  tb_boat.rc
samples/ocean/: CMakeLists.txt
samples/ocean/source/: main.c
samples/samplecore/: CMakeLists.txt
samples/samplecore/include/: samplecore.h
samples/samplecore/source/: samplecore.c
samples/terrain/: CMakeLists.txt
samples/terrain/source/: main.c
source/: allocator.c  assets.c  audiosystem.c  bloom.c  bloomblur.hlsl  blur.hlsl  blur.hlsl.cs  blur_h.hlsl.cs  blur_v.hlsl.cs  brightness.hlsl  cameracomponent.c  camerasystem.c  cgltf.c  cimgui.cpp  colorcopy.hlsl  config.h.in  copy.hlsl.cs  coreuicomponent.c  coreuisystem.c  depth.hlsl  depthcopy.hlsl  downsample.hlsl  downsample.hlsl.cs  env_filter.hlsl  fxaa.c  fxaa.hlsl  fxaa.hlsli  gltf.hlsl  gltf.hlsl.m  gltf.hlsl.rt  gltf.slang  gltf_P3N3.hlsl  gltf_P3N3T4U2.hlsl  gltf_P3N3U2.hlsl  gltf_next.hlsl  hash.c  imgui.hlsl  imguisystem.c  infomode.c  inputsystem.c  (+162 more)
source/blocks/: Block_private.h  data.c  runtime.c
src/: allocator.c  allocator.h  assetmanifest.h.in  assets.c  boatcamerasystem.c  boatcamerasystem.h  brdf_lut.hlsl  camera.c  camera.h  cameracomponent.c  cameracomponent.h  camerasystem.c  camerasystem.h  cgltf.c  cimgui.cpp  cimgui.h  color_mesh.hlsl  colorcopy.hlsl  common.hlsli  config.h.in  coreuicomponent.c  coreuicomponent.h  coreuisystem.c  cube.c  cube.h  cube_view_lut.hlsli  demo.c  demo.h  depth.hlsl  depthcopy.hlsl  env_filter.hlsl  fractal.hlsl  fullscreenvert.hlsli  gltf.hlsl  gltf.hlsl.m  gltf.hlsli  gltf_P3N3.hlsl  gltf_P3N3T4U2.hlsl  gltf_P3N3U2.hlsl  gltf_P3N3U2U2.hlsl  (+113 more)
src/res/: toybox.exe.manifest  toybox.rc
switch/src/: entry.c
triplets/: README.md  x64-linux-llvm.cmake  x64-win-llvm-static.cmake
triplets/x64-linux-llvm/: x64-linux-llvm.toolchain.cmake
vcpkg/: .gitignore  CMakeCache.txt
vcpkg/ports/cgltf/: CONTROL  portfile.cmake
vcpkg/ports/imgui/: portfile.cmake
vcpkg/ports/ktx/: 0001-Use-vcpkg-zstd.patch  0002-Switch-Hack.patch  0003-x64-Android-No-SSE42.patch  portfile.cmake  vcpkg.json
vcpkg/ports/libpng/: portfile.cmake
vcpkg/ports/meshoptimizer/: portfile.cmake  vcpkg.json
vcpkg/ports/mimalloc/: fix-android.patch  fix-switch.patch  portfile.cmake  vcpkg.json
vcpkg/ports/optick/: portfile.cmake  vcpkg.json
vcpkg/ports/sdl2/: 0005-sdl2-fix-switch.patch  portfile.cmake
vcpkg/ports/spirv-tools/: 0002-no-install-shared.patch  portfile.cmake
vcpkg/ports/tool-dxc/: portfile.cmake  vcpkg.json
vcpkg/ports/tool-gltfpack/: portfile.cmake  vcpkg.json
vcpkg/ports/tracy/: CMakeLists.txt  fix-switch.patch  portfile.cmake  usage  vcpkg.json
vcpkg/ports/volk/: fix-switch.patch  portfile.cmake  vcpkg.json
vcpkg/ports/vulkan-headers/: portfile.cmake  vcpkg.json
vcpkg/scripts/cmake/: vcpkg_common_definitions.cmake  vcpkg_find_acquire_program.cmake
vcpkg/scripts/toolchains/: switch.cmake
vcpkg/triplets/community/: arm64-android.cmake  arm64-switch.cmake  x64-android.cmake
viewer/: CMakeLists.txt
viewer/assets/originals/: csg_test.blend  img_test.blend  (+5 more)
viewer/source/: main.c  viewersystem.c  viewersystem.h
(+30 files in other folders)
